[package]
name = "debug-opentelemetry-poem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error handling
eyre = "0.6"
# thiserror = "1"
color-eyre = "0.6"

# async
# futures = "0.3"
# async-trait = "0.1"
# async_once = "0.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "parking_lot"] }

# Metrics
# opentelemetry-semantic-conventions = { version = "0.10"}
opentelemetry-prometheus = { version = "0.11"}
# prometheus = { version = "0.13"}
opentelemetry = {  version = "0.18", features = ["metrics"]}

# HTTP
poem = { version = "1", features = ["compression", "opentelemetry", "prometheus", "eyre06", "static-files" ] }
# reqwest = { version = "0.11", features = ["json"] }

